--- a/assets/css/tuyensinh.css
+++ b/assets/css/tuyensinh.css
@@ -1,3 +1,115 @@
+header{
+    background-color: #003057;
+}
+.flex{
+    display:flex;
+}
+.header-left{
+    margin-left:40px;
+}
+.header-logo{
+    width:10%;
+}
+.header-logo img{
+    width:100%;
+}   
+.header-name{
+    color:#fff;
+   margin:40px 10px 0;
+}
+.header-name-1{
+
+}
+.header-name-2{
+
+}
+.header-right{
+    align-items: center;
+    margin-right:30px;
+    width:30%;
+}
+.header-right-resg{
+    background-color:#30ccd6;
+    padding:12px 24px;
+    margin-right:12px;
+    border-radius: 60px;
+    
+}
+.header-right-resg >a{
+    color:#111a29;
+    font-size:12px;
+    font-weight:600;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.header-right-menu{
+    font-size:25px;
+    font-weight:400;
+    background-color:#fff;
+    padding:10px 15px;
+    border-radius:50%;
+}
+.header-title-part{
+    text-align:right;
+}
+.header-title{
+    text-transform: uppercase;
+    color:white;
+    font-size:60px;
+    margin: 24px 37px 24px 0;
+}
+.header-img-wrapper{
+    position: relative;
+    display:flex;
+    justify-content: flex-end;  
+}
+.header-img{
+    width:90%; 
+}
+.header-img img{
+    width:100%;
+}
+.header-img-content{
+    position:absolute;
+    color:white;
+    width: 90%;
+    padding:106px 40px 48px;    
+    right: 0; 
+    bottom:0;
+    background:linear-gradient(0deg, #00000088 0%, #00000000 100%); 
+    
+}
+.header-img-title{
+    font-size:14px;
+    font-weight:600;
+    text-transform: uppercase;
+    border-top: 1px solid #ccc;
+    padding-top: 12px;
+    margin-bottom:16px;
+}
+.header-img-text{
+    font-size:32px;
+    font-weight:800;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*experience*/
 .experience{
     background-color:#30ccd6;
@@ -57,9 +169,10 @@
 .experience-item-desc{
     margin:16px;
     color:#455664;
+    height:100px;
 }
 .experience-item-more{
-    margin-top:100px;
+    margin-top:50px;
     background-color:#b4ebf5;
     width:100%;
     padding: 12px;
