--- a/assets/css/tuyensinh.css
+++ b/assets/css/tuyensinh.css
@@ -17,12 +17,6 @@ header{
     color:#fff;
    margin:40px 10px 0;
 }
-.header-name-1{
-
-}
-.header-name-2{
-
-}
 .header-right{
     align-items: center;
     margin-right:30px;
@@ -77,8 +71,7 @@ header{
     padding:106px 40px 48px;    
     right: 0; 
     bottom:0;
-    background:linear-gradient(0deg, #00000088 0%, #00000000 100%); 
-    
+    background:linear-gradient(0deg, #00000088 0%, #00000000 100%);  
 }
 .header-img-title{
     font-size:14px;
@@ -210,8 +203,92 @@ header{
     font-weight:600;
     padding-left: 12px;
 }
+.video>iframe{
+    display:flex;
+    margin: 100px auto;
+}
 
+/*process*/
+.process{
+    padding:55px 110px;
+}
+.process-left{
+    width:50%;
+}
+.process-left img{
+    width:100%;
+    border-radius: 10px;
+}
+.process-right{
+    width:50%;
+    margin-left:30px;
+}
+.process-title{
+    font-size:32px;
+    font-weight:600;
+}
+.process-desc{
+    color:#716D67;
+    margin:32px 0;
+}
+.process-list{
+    color:#716D67;
+    margin-left:10px;
+}
+.process-list li{
+    list-style-type: none;
+    margin-bottom:16px;
+}
 
+/*question*/
+.question{
+    width:80%;
+    margin:0 auto;
+    padding-bottom:104px;
+    padding-top:0;
+}
+.question-title>h2{
+    text-transform: uppercase;
+    font-size:38px;
+    font-weight:300;
+    text-align: center;
+    margin-bottom:40px;
+}
+.question-list{
+    background-color: #e8f8fb;
+    border-radius: 16px;
+    
+}
+.question-item{
+    padding: 32px;
+    border-bottom:1px solid #ccd5dd;
+}
+.question-item:last-child{
+    border:none;
+}
+.question-item-title{
+    position:relative;
+}
+.question-item-left{
+    padding-right:25%;
+    font-size:20px;
+    font-weight:600;
+    
+}
+.question-item-right>i{
+    background-color: #fff;
+    border-radius:50%;
+    padding:8px 10px;
+    position:absolute;
+    top:20px;
+    right:20px;
+}
+.question-item-answer{
+    font-size:18px;
+    padding-top:32px;
+    margin-right:25%;
+    display:block;
+}
 
 
 
