--- a/assets/css/trangchu.css
+++ b/assets/css/trangchu.css
@@ -192,6 +192,7 @@
 
 .extra-desc{
   height: 85px;
+  margin-bottom: 12px;
 }
 .button{
     margin:0 auto;
@@ -222,7 +223,7 @@
     background-color: rgba(7, 43, 77, 0.9);
     right:4rem;
     top:3rem;
-    padding: 5rem 2rem;
+    padding: 3rem 2rem;
 }
 
 /*footer*/
