--- a/assets/css/trangchu.css
+++ b/assets/css/trangchu.css
@@ -1,3 +1,21 @@
+.header-scroll.sticky{
+    position:fixed;
+    width:100%;
+    height: auto;
+    top: 0;
+    left: 0;
+    background-color:rgba(7, 43, 77, 0.9);
+    z-index: 100;
+}
+.sticky .header-logo{
+    width: 20%;
+}
+.sticky .header-nav{
+    font-size:16px;
+}
+.sticky .header-right-resg-link{
+    font-size:12px;
+}
 
 
 
@@ -16,7 +34,7 @@
     padding: 12px 0; 
     display: flex; 
     justify-content: space-between;
-    align-items:center;     
+    align-items:center;  
 }
 .header-logo{ 
     width:30%;
@@ -63,6 +81,17 @@
    padding:12px 30px;
    color: white;
 }
+.header-tobottom{
+    position: absolute;
+    bottom:20px;
+    left: 50%;
+    right: 50%;
+}
+.header-tobottom-icon{
+    font-size: 42px;
+    color:#183153;
+}
+
 .about-schl{
     width :800px;
     padding: 64px 0;
@@ -147,6 +176,11 @@
 .icon{
     width:80px;
     height:74px;
+    transition: transform ease .4s;
+    cursor: pointer;
+}
+.icon:hover{
+    transform:scale(1.2);
 }
 /*slogan*/
 .slogan{
@@ -179,10 +213,17 @@
     width:33.333333%;
     padding: 0 12px;
 }
-
+.extra-item-img{
+    overflow: hidden;
+}
 .extra-img{
-    width: 100%; 
-    
+    width: 100%;  
+    transition: transform ease .4s;
+    cursor: pointer;
+}
+
+.extra-img:hover {
+    transform:scale(1.3);
 }
 
 .extra-body{
@@ -203,6 +244,9 @@
     background-color:#0173b1;
     padding: 12px 32px;
     display:block;
+}
+.extra-btn:hover{
+    background-color: #183153;
 }
 
 /*infer*/
@@ -252,31 +296,19 @@
     font-size: 40px;
     color:white;
 }
-.footer-menu-1{
-    position:absolute;
-    color:white;
-    top:30px;
-    right:40px;
-}
-.menu-1-section{
-    text-align: center;
-    padding: 8px 16px;
-   
-}
-.menu-1-section>i{
-    font-size: 40px;
-}
-.menu-1-section>div{
-    border: 2px solid white;
-    margin-top:1rem;
-    font-size:12px;
-    padding:11px 22px;
-}
+
 .contact li{
     list-style-type: none;
     line-height:2.0;
     color:beige;
     text-decoration:none;
+}
+.contact a{
+    color: white;
+    text-decoration: none;
+}
+.contact a:hover{
+    text-decoration: underline;
 }
 .menu-item {
     text-decoration: none;
@@ -302,6 +334,7 @@
     align-items:center;
     justify-content:center;
     display:none;
+    z-index: 1000; 
 }
 .modal.open{
     display:flex;
@@ -313,6 +346,9 @@
     min-height:200px;
     position:relative;
     animation:modalFadeIn ease .5s;
+    display:flex;
+    border-radius: 12px;
+    overflow:hidden;    
 }
 .modal-header{
     background-color:#005a87;
@@ -325,20 +361,78 @@
 }
 .modal-close {
     position: absolute;
-    right: 0;
-    top: 0;
+    right: 10px;
+    top: 10px;
     color: white;
     padding: 12px;
-    cursor: pointer;
-    opacity:0.8;
+    cursor: pointer;   
+    padding: 8px 12px;
+    background-color:#094067;
+    border-radius: 50%;
+    font-size: 14px;
 }
+
 .modal-close:hover{
     opacity:1;
 }
+ 
 .modal-body{
-    padding:16px;
-    display:inline-block;
+    width:50%;
+    padding:16px 32px;    
+    display:flex; 
+    margin: 32px 0;
 }
+
+.modal-body-img {
+    width:50%;
+    display:flex;
+}
+
+.modal-body-img > img {
+    width: 100%;
+}
+ 
+.modal-body-name > input {
+    border: none;   
+    margin-bottom: 24px;
+    border-bottom: 2px solid #094067;
+    width:100%;
+    outline:none;
+    font-size: 16px;
+    padding: 4px 0;
+}  
+
+.modal-body-name > input::placeholder    {
+    color: #094067;
+    text-transform: capitalize;
+}
+
+.modal-body-name > textarea {
+    border: 2px solid #094067;
+    width:100%; 
+    font-size: 16px;
+    padding: 4px;
+    border-radius: 8px;
+}
+
+.modal-body-name > textarea:focus {
+    border: 2px solid #094067; 
+    outline: none;
+}
+
+.modal-body-name > button {
+    width:100%;
+    border: none;
+    padding: 12px 0;
+    color: white;
+    background-color:#094067;
+    cursor:pointer;
+    margin-top: 12px;
+    font-size: 16px; 
+    text-transform: uppercase; 
+    border-radius:4px;
+}
+
 
 @keyframes modalFadeIn {
     from{
