--- a/assets/css/tuyensinh.css
+++ b/assets/css/tuyensinh.css
@@ -131,8 +131,9 @@ header{
     font-size:20px;
 }
 .experience-list{
-   display:flex;
+    display:flex;
     flex-wrap: nowrap; 
+    margin: 0 16px;
 }
 .experience-item{
     flex: 0 0 30%;
@@ -204,8 +205,7 @@ header{
     padding-left: 12px;
 }
 .video>iframe{
-    display:flex;
-    margin: 100px auto;
+    display:flex; 
 }
 
 /*process*/
@@ -278,10 +278,13 @@ header{
 .question-item-right>i{
     background-color: #fff;
     border-radius:50%;
-    padding:8px 10px;
+    padding:9px 10px;
     position:absolute;
     top:20px;
     right:20px;
+    cursor: pointer;
+    transition: all 0.25s;
+    transform: rotate(-90deg);
 }
 .question-item-answer{
     font-size:18px;
@@ -499,3 +502,27 @@ header{
     right:20px;
     color:antiquewhite;
 }
+
+/* Slick slider */
+
+.slick-prev,
+.slick-next {
+    position: absolute;
+    top:50%;
+    transform: translateY(-50%); 
+    padding: 8px 14px; 
+    z-index: 10;
+    border: none;
+    border-radius: 50%;
+    font-size: 18px;
+    cursor: pointer; 
+} 
+
+.slick-prev {
+    left:-12px;
+}
+
+.slick-next {
+    right: 22px;
+}
+
