--- a/assets/css/trangchu.css
+++ b/assets/css/trangchu.css
@@ -59,6 +59,11 @@
     padding:8px 16px;
     display:block;
     color: white;
+    font-weight: bold;
+}
+
+.header-nav-item-link:hover{
+    color:#094067;
 }
 .header-right{
     display:flex;
