--- a/assets/css/chuongtrinhhoc.css
+++ b/assets/css/chuongtrinhhoc.css
@@ -37,6 +37,10 @@
     display:block;
     color:#fff;
 }
+.header-nav-item-link:hover{
+    color:#30ccd6;
+    font-weight: bold;
+}
 .header-right{
     display:flex;
     align-items: center;
@@ -275,11 +279,11 @@ input.input-search {
     background-position: center;
     background-repeat:no-repeat;
     background-size: cover;
-    height:30rem;
     margin-top:3.5rem;
     justify-content: space-around;
     align-items: center;
     position:relative;
+    flex-wrap: wrap;
 }
 .footer-logo{
     width:20%;
