--- a/assets/css/tintuc.css
+++ b/assets/css/tintuc.css
@@ -164,11 +164,11 @@ header{
     background-position: center;
     background-repeat:no-repeat;
     background-size: cover;
-    height:30rem;
     margin-top:3.5rem;
     justify-content: space-around;
     align-items: center;
     position:relative;
+    flex-wrap: wrap;
 }
 .footer-logo{
     width:20%;
