--- a/assets/css/trangchu.css
+++ b/assets/css/trangchu.css
@@ -98,7 +98,8 @@
 }
 
 .about-schl{
-    width :800px;
+    max-width: 800px;
+    width:100%;
     padding: 64px 0;
     margin-left :auto;
     margin-right :auto;
@@ -148,10 +149,11 @@
 
 .reason-wrapped  {
     display:flex;
+    flex-wrap: wrap;
 }
 .reason-img{
     width:25%;
-    margin-right: 24px;
+    padding-right: 24px;
 }
 
 
@@ -211,6 +213,7 @@
 }
 .extra-list{
     display:flex;
+    flex-wrap: wrap;
     width:100%;
     margin-top: 2rem;
 }
@@ -281,11 +284,11 @@
     background-position: center;
     background-repeat:no-repeat;
     background-size: cover;
-    height:30rem;
     margin-top:3.5rem;
     justify-content: space-around;
     align-items: center;
     position:relative;
+    flex-wrap: wrap;
 }
 .footer-logo{
     width:20%;
@@ -452,4 +455,12 @@
 
 .width{
     width:100%;
+}
+
+.mobile-menu {
+    display:none;
+}
+
+.header-logo-mobile {
+    display:none;
 }
