--- a/assets/css/trangchu.css
+++ b/assets/css/trangchu.css
@@ -22,7 +22,7 @@
 /* Header */
 .header{   
     position: relative;  
-    background-image: url('../img/index/head1.avif');
+    background-image: url('../img/index/footer.jpg');
     background-size: cover; 
     background-position:center;
     background-repeat: no-repeat;  
