--- a/assets/css/tuyensinh.css
+++ b/assets/css/tuyensinh.css
@@ -287,6 +287,7 @@ header{
 .question-item{
     padding: 32px;
     border-bottom:1px solid #ccd5dd;
+    position: relative;
 }
 .question-item:last-child{
     border:none;
@@ -304,7 +305,7 @@ header{
 .question-item-right{
     position:absolute;
     right: 48px;
-    top: 48x;
+    top: 48px;
 }
 .question-item-right>i{
     background-color: #fff;
@@ -318,7 +319,7 @@ header{
     font-size:18px;
     padding-top:32px;
     margin-right:25%;
-    display:block;
+    display:none;
 }
 .modal{
     position:fixed;
