--- a/assets/css/tuyensinh.css
+++ b/assets/css/tuyensinh.css
@@ -25,27 +25,22 @@ header{
     display:flex;
 }
 .header-left{
-    margin-left:40px; 
-    text-decoration: none;   
-    align-items: center; 
-    flex: 1;
-} 
-
-.header-logo{ 
-    width: 30%;
+    margin-left:40px;
+}
+.header-logo{
+    width:10%;
 }
 .header-logo img{
     width:100%;
 }   
 .header-name{
-    color:#fff; 
-    margin-left: 12px;
+    color:#fff;
+   margin:40px 10px 0;
 }
 .header-right{
     align-items: center;
-    margin-right:30px;  
-    width: 70%;
-    justify-content: flex-end;
+    margin-right:30px;
+    width:30%;
 }
 .header-right-resg{
     margin-right:12px;
@@ -65,15 +60,14 @@ header{
     background-color:#111a29;
 }
 
-.header-right-menu{ 
-    cursor: pointer;
+.header-right-menu{
+    
 }
 .header-right-menu>i{
     font-size:25px;
     background-color:#fff;
     padding: 12px 15px;
     border-radius:50%;
-    color: black;
 }
 .header-title-part{
     text-align:right;
@@ -166,17 +160,13 @@ header{
     flex-wrap: nowrap; 
     margin: 0 16px;
 }
-.exprecience-item-wrapper { 
-    flex: 0 0 33.333333%;
-    width:33.333333%; 
-    padding: 0 18px;
-}
-
 .experience-item{
+    flex: 0 0 30%;
+    width:30%;
     background-color:#fff;
     border-radius: 16px;
     overflow:hidden;
-    /* margin-right:36px;   */
+    margin-right:36px;  
 }
 .experience-item-content{
     padding: 0 32px;
@@ -196,7 +186,7 @@ header{
     color:#111a29;
 }
 .experience-item-desc{
-    padding:16px;
+    margin:16px;
     color:#455664;
     height:100px;
 }
@@ -275,11 +265,6 @@ header{
     margin-bottom:16px;
 }
 
-.process-list li i {
-    margin-right: 8px;
-    color: #30ccd6;
-}
-
 /*question*/
 .question{
     width:80%;
@@ -302,14 +287,13 @@ header{
 .question-item{
     padding: 32px;
     border-bottom:1px solid #ccd5dd;
-    position: relative;
 }
 .question-item:last-child{
     border:none;
 }
 .question-item-title{
-    display:flex;
-    position: relative;
+   display:flex;
+
 }
 .question-item-left{
     padding-right:25%;
@@ -318,10 +302,9 @@ header{
     
 }
 .question-item-right{
-    position:absolute; 
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
+    position:absolute;
+    right: 48px;
+    top: 48x;
 }
 .question-item-right>i{
     background-color: #fff;
@@ -335,7 +318,7 @@ header{
     font-size:18px;
     padding-top:32px;
     margin-right:25%;
-    display:none;
+    display:block;
 }
 .modal{
     position:fixed;
@@ -361,7 +344,6 @@ header{
     position:relative;
     animation:modalFadeIn ease .5s;
     display:flex;
-    flex-wrap: wrap;
     border-radius: 12px;
     overflow:hidden;    
 }
@@ -378,7 +360,7 @@ header{
     position: absolute;
     right: 10px;
     top: 10px;
-    color: white;
+    color: #d0dce7;
     padding: 12px;
     cursor: pointer;   
     padding: 8px 12px;
@@ -485,6 +467,7 @@ header{
 
 /*map-weather*/
 .map-weather{
+
 }
 .map{
     position: relative;
@@ -496,13 +479,11 @@ header{
 }
 .weather{
     background-color: #003057;
-    top:8%;
-    bottom: 8%;
+    top:0;
     left:8.5%;
     padding:48px;
     width:30%;
     position:absolute;
-    border-radius: 12px;
 }
 .weather-title{
     color:white;
@@ -559,18 +540,16 @@ header{
     margin-top:14px;
 }
 .weather-btn{
+    padding:13px 24px;
     border: 1px solid #fff;
-    border-radius:42px;   
-    display: inline-flex;
+    border-radius:42px;
+    width:50%;
 }
 .weather-btn a{
     color:#fff;
     text-decoration: none;
     font-size:12px;
-    padding:16px 28px;
-    display: flex; 
     text-transform: uppercase;
-    text-align: center; 
 }
 .weather-btn:hover {
     background-color: #fff;
@@ -675,28 +654,13 @@ header{
     border-radius: 50%;
     font-size: 18px;
     cursor: pointer; 
-    transition: all 0.25s;
-    background-color: #ddd;
 } 
 
-.slick-prev:hover,
-.slick-next:hover {
-    background-color: #bbb;
-}
-
-.slick-prev:hover {
-    left: -10px;
-}
-
-.slick-next:hover {
-    right: -10px;
-}
-
 .slick-prev {
-    left: -5px;
+    left:-12px;
 }
 
 .slick-next {
-    right: -5px;
+    right: 22px;
 }
 
