--- a/assets/css/tuyensinh.css
+++ b/assets/css/tuyensinh.css
@@ -25,22 +25,27 @@ header{
     display:flex;
 }
 .header-left{
-    margin-left:40px;
-}
-.header-logo{
-    width:10%;
+    margin-left:40px; 
+    text-decoration: none;   
+    align-items: center; 
+    flex: 1;
+} 
+
+.header-logo{ 
+    width: 30%;
 }
 .header-logo img{
     width:100%;
 }   
 .header-name{
-    color:#fff;
-   margin:40px 10px 0;
+    color:#fff; 
+    margin-left: 12px;
 }
 .header-right{
     align-items: center;
-    margin-right:30px;
-    width:30%;
+    margin-right:30px;  
+    width: 70%;
+    justify-content: flex-end;
 }
 .header-right-resg{
     margin-right:12px;
@@ -60,14 +65,15 @@ header{
     background-color:#111a29;
 }
 
-.header-right-menu{
-    
+.header-right-menu{ 
+    cursor: pointer;
 }
 .header-right-menu>i{
     font-size:25px;
     background-color:#fff;
     padding: 12px 15px;
     border-radius:50%;
+    color: black;
 }
 .header-title-part{
     text-align:right;
@@ -160,13 +166,17 @@ header{
     flex-wrap: nowrap; 
     margin: 0 16px;
 }
+.exprecience-item-wrapper { 
+    flex: 0 0 33.333333%;
+    width:33.333333%; 
+    padding: 0 18px;
+}
+
 .experience-item{
-    flex: 0 0 30%;
-    width:30%;
     background-color:#fff;
     border-radius: 16px;
     overflow:hidden;
-    margin-right:36px;  
+    /* margin-right:36px;   */
 }
 .experience-item-content{
     padding: 0 32px;
@@ -186,7 +196,7 @@ header{
     color:#111a29;
 }
 .experience-item-desc{
-    margin:16px;
+    padding:16px;
     color:#455664;
     height:100px;
 }
@@ -265,6 +275,11 @@ header{
     margin-bottom:16px;
 }
 
+.process-list li i {
+    margin-right: 8px;
+    color: #30ccd6;
+}
+
 /*question*/
 .question{
     width:80%;
@@ -287,13 +302,14 @@ header{
 .question-item{
     padding: 32px;
     border-bottom:1px solid #ccd5dd;
+    position: relative;
 }
 .question-item:last-child{
     border:none;
 }
 .question-item-title{
-   display:flex;
-
+    display:flex;
+    position: relative;
 }
 .question-item-left{
     padding-right:25%;
@@ -302,9 +318,10 @@ header{
     
 }
 .question-item-right{
-    position:absolute;
-    right: 48px;
-    top: 48x;
+    position:absolute; 
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
 }
 .question-item-right>i{
     background-color: #fff;
@@ -318,7 +335,7 @@ header{
     font-size:18px;
     padding-top:32px;
     margin-right:25%;
-    display:block;
+    display:none;
 }
 .modal{
     position:fixed;
@@ -344,6 +361,7 @@ header{
     position:relative;
     animation:modalFadeIn ease .5s;
     display:flex;
+    flex-wrap: wrap;
     border-radius: 12px;
     overflow:hidden;    
 }
@@ -360,7 +378,7 @@ header{
     position: absolute;
     right: 10px;
     top: 10px;
-    color: #d0dce7;
+    color: white;
     padding: 12px;
     cursor: pointer;   
     padding: 8px 12px;
@@ -467,7 +485,6 @@ header{
 
 /*map-weather*/
 .map-weather{
-
 }
 .map{
     position: relative;
@@ -479,11 +496,13 @@ header{
 }
 .weather{
     background-color: #003057;
-    top:0;
+    top:8%;
+    bottom: 8%;
     left:8.5%;
     padding:48px;
     width:30%;
     position:absolute;
+    border-radius: 12px;
 }
 .weather-title{
     color:white;
@@ -540,16 +559,18 @@ header{
     margin-top:14px;
 }
 .weather-btn{
-    padding:13px 24px;
     border: 1px solid #fff;
-    border-radius:42px;
-    width:50%;
+    border-radius:42px;   
+    display: inline-flex;
 }
 .weather-btn a{
     color:#fff;
     text-decoration: none;
     font-size:12px;
+    padding:16px 28px;
+    display: flex; 
     text-transform: uppercase;
+    text-align: center; 
 }
 .weather-btn:hover {
     background-color: #fff;
@@ -654,13 +675,28 @@ header{
     border-radius: 50%;
     font-size: 18px;
     cursor: pointer; 
+    transition: all 0.25s;
+    background-color: #ddd;
 } 
 
+.slick-prev:hover,
+.slick-next:hover {
+    background-color: #bbb;
+}
+
+.slick-prev:hover {
+    left: -10px;
+}
+
+.slick-next:hover {
+    right: -10px;
+}
+
 .slick-prev {
-    left:-12px;
+    left: -5px;
 }
 
 .slick-next {
-    right: 22px;
+    right: -5px;
 }
 
