--- a/assets/css/tintuc.css
+++ b/assets/css/tintuc.css
@@ -45,6 +45,11 @@ header{
 }
 
 /*news*/
+.news,
+.events {
+    padding: 0 8px;
+}
+
 .news-wrapper{
     padding:12px 100px;
     border-bottom: 1px solid #ccc;
@@ -210,4 +215,53 @@ header{
     bottom:20px;
     right:20px;
     color:antiquewhite;
+}
+ 
+.slider-img {
+    margin: 0 16px;
+}
+
+.slider-img img {
+    width: 100%;
+    height: 300px;   
+    padding: 0 12px;  
+} 
+
+.header-news-mobile {
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    background-color: #003057;
+    height: 100px;
+    display: none;
+    align-items: center;
+    padding: 0 16px; 
+    justify-content: space-between;
+}
+
+.header-news-menu  {
+    list-style-type: none; 
+}
+
+.header-news-item-logo {
+    width: 30%; 
+}
+
+.header-news-item-logo img {
+    width: 100%;
+}
+
+.header-news-item-logo > a,
+.header-news-item > a {
+    text-decoration: none;
+    color: white;
+} 
+
+.header-nav {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100px;
+    background-color: #000;
+    z-index: 10000;
 }
