--- a/assets/css/tintuc.css
+++ b/assets/css/tintuc.css
@@ -2,10 +2,10 @@
 header{
     position: relative;
 }
-.header-img{
+.header-img-4{
     width:100%;
 }
-.header-img img{
+.header-img-4 img{
     width:100%;
    
 }
