--- a/assets/css/trangchu.css
+++ b/assets/css/trangchu.css
@@ -22,6 +22,7 @@
 
 
 
+
 /* Header */
 .header{   
     position: relative;  
@@ -248,13 +249,35 @@
     padding:5rem 3rem;
     font-size:1.5rem;
 }
+@keyframes moveInleft {
+    from{
+        transform:translateX(-140px);
+    }
+    to{
+        transform:translateX(0);/*tra ve vt ban dau*/
+    }
+}
+@keyframes moveInright {
+    from{
+        transform:translateX(140px);
+    }
+    to{
+        transform:translateX(0);/*tra ve vt ban dau*/
+    }
+}
 .slogan-img{
     width:60%;
 
 }
 .slogan-pic{
     width:100%;
+    transition: transform ease .4s;
+    cursor: pointer;
 }
+.slogan-pic:hover{
+    transform:scale(1.2);
+}
+
 /* Extra infor */
 .extra-in4{
     margin-top:3rem;
